Fixed an issue where heat/cool limits weren't being cleared if an object remained on the burner after the burner was turned off.
Made extraction of energy chunks work well in conjunction with the layering effect.
Added layers where the energy chunks reside in order to allow them to look more 3D in their positions.
Made energy chunks wander more as the move upwards through the air.
Made animation faster for burner turning off.
# 0.00.07 (65076) Jun 14, 2012
6/14/12 Snapshot of a version with incorrect, but interesting, behavior.
# 0.00.06 (65042) Jun 13, 2012
6/13/12 Capturing a snapshot for review and discussion with design team.
Added fading for energy chunks in order to give them more of a 3D look in the energy containers.
Changed algorithm for positioning energy chunks in the energy containers so that they can go into the 3D projection areas.
Animated turn off of the burner when heating/cooling limits are hit.
E's come from top center of objects when going into the air.
Improved energy chunk exchange behavior with air
Made the burners not interact with the air when something is on top of it.
Removed ambient heat chunks from the air.
Made check box not have focus at startup.
Added unique heat transfer constants for brick and iron, instead of treating both as just blocks.
Changed caption for the check box that shows the energy.
Added support for different heat transfer constants between the different categories of model elements, e.g. block to water, water to air, etc.
# 0.00.05 (64635) Jun 4, 2012
6/4/12 Snapshot for testing and reviewing changes to the behavior of the energy chunks.
Adjusted specific heats and energy-to-chunk mapping function to the point where energy chunk numbers look reasonably good.  This may be temporary.
Modified the energy chunk distribution algorithm to work without "jitter" at high densities and when Fast Forward is enabled.